# licorne-rs

./: Cargo.toml  README.md
.cargo/: config
.github/workflows/: bloat.yml  build.yml  clippy.yml  format.yml
kicad/: README.md  custom.lib
kicad/licorne-board/: licorne-board-cache.lib  licorne-board.kicad_pcb  licorne-board.pro  licorne-board.sch
src/: main.rs
