[package]
name = "licorne-rs"
edition = "2018"
version = "0.0.1"
authors = ["Marc <dkm@kataplop.net>"]
description = "Simple alarmclock that changes color depending on the time for predefined periods. It is intended for small kids before they can read the time !"
keywords = ["arm", "cortex-m", "template"]
categories = ["embedded", "no-std"]
license = "GPL-3.0+"
repository = "https://github.com/dkm/licorne-rs"

[profile.release]
lto = true
codegen-units = 1
debug = true
panic = "abort"

[profile.dev]
lto = false
codegen-units = 1
debug = true
panic = "abort"

[dependencies]
ws2812-spi = {git = "https://github.com/smart-leds-rs/ws2812-spi-rs"}
tm4c123x-hal = {git = "https://github.com/thejpster/tm4c-hal.git", features = ["rt"]}
ds323x = "0.3.1"
nb = "0.1.2"
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
cortex-m-semihosting = "0.3.5"
panic-semihosting = "0.5.3"
panic-halt = "0.2.0"
smart-leds = "0.3.0"

## we need to keep it optimized or the SPI won't be able to keep-up and it
## simply does not work
[profile.dev.package.ws2812-spi]
opt-level = 3

[profile.dev.package.smart-leds]
opt-level = 3

[dependencies.embedded-hal]
version = "0.2.3"
features = ["unproven"]
