[package]
name = "licorne-rs"
edition = "2018"
version = "0.0.1"
authors = ["Marc <dkm@kataplop.net>"]
description = "Simple alarmclock that changes color depending on the time for predefined periods. It is intended for small kids before they can read the time !"
keywords = ["arm", "cortex-m", "template"]
categories = ["embedded", "no-std"]
license = "GPL-3.0+"
repository = "https://github.com/dkm/licorne-rs"

[profile.release]
lto = true
codegen-units = 1
debug = true
panic = "abort"

[profile.dev]
lto = false
codegen-units = 1
debug = true
panic = "abort"

[dependencies]
ws2812-spi = "0.3"
rotary-encoder-hal = {git = "https://github.com/dkm/rotary-encoder-hal" , features = ["table-decoder"] }
##debouncr = "0.2.0"
debouncr = { git = "https://github.com/dkm/debouncr/", branch = "pr/fix_stateful_init" }

##ws2812-spi = {git = "https://github.com/smart-leds-rs/ws2812-spi-rs"}
## tm4c123x-hal = {git = "https://github.com/thejpster/tm4c-hal.git", features = ["rt"]}
##tm4c123x-hal = "0.10"
##tm4c-hal = "0.4"

tm4c123x = { path = "../dslite2svd/crates/tm4c123x" }
##"0.9"
tm4c-hal = {path = "../tm4c123x-hal/tm4c-hal"}
tm4c123x-hal = {path = "../tm4c123x-hal/tm4c123x-hal", features = ["rt"]}
ds323x = "0.3"
nb = "0.1"
cortex-m = "0.6"

cortex-m-semihosting = "0.3"
panic-semihosting = "0.5"
##panic-halt = "0.2.0"
smart-leds = "0.3"

epd-waveshare = {path = "../epd-waveshare" }
embedded-graphics = "0.6"
cortex-m-rtic = "0.5"

[dependencies.cast]
version = "0.2"
default-features = false

[dependencies.cortex-m-rt]
version = "0.6.12"
features = ["device"]

## we need to keep it optimized or the SPI won't be able to keep-up and it
## simply does not work
[profile.dev.package.ws2812-spi]
opt-level = 3

[profile.dev.package.smart-leds]
opt-level = 3

[dependencies.embedded-hal]
version = "0.2"
features = ["unproven"]

[features]
default = []

## This will use semihosting for printing debug trace.
usesemihosting = []
